Configure exposed header.